# json-lawgic

./: .gitignore  LICENSE.md  README.md  basic-prompting.json  law-to-logic.json  package.json  pnpm-lock.yaml  pyproject.toml  test  unauthorized-practice.json
data/: interpreted-laws.json  showcase.json
data/chapters/: 000000010.json  000000018.json  000000032.json  000000051.json  000000052.json  000000059.json  000000061.json  000000067.json  000000069.json  000000082.json  000000095.json  000000101.json  000000140.json  000000142.json  000000166.json  000000169.json  000000171.json  000000182.json  000000195.json  000000201.json  000000203.json  000000206.json  000000207.json  000000209.json  000000219.json  000000228.json  000000230.json  000000244.json  000000246.json  000000255.json  000000261.json  000000266.json  000000271.json  000000273.json  000000279.json  000000280.json  000000281.json  000000292.json  000000299.json  000000300.json  (+1317 more)
data/default/: 000000002.json  000000003.json  000000007.json  000000010.json  000000013.json  000000014.json  000000016.json  000000017.json  000000018.json  000000020.json  000000021.json  000000022.json  000000023.json  000000024.json  000000026.json  000000028.json  000000031.json  000000032.json  000000033.json  000000034.json  000000036.json  000000038.json  (+26059 more)
flows/: dsl-generator.json  law-to-logic.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml
markdown/: json-logic-summary.md  json-logic.md
notebooks/: dataset_processing.ipynb  llm-calling.ipynb  local-llm-calling.ipynb  util.ipynb
(+29879 files in other folders)
