[project]
name = "json-lawgic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "json-logic>=0.6.3",
    "langchain-openai>=0.2.9",
    "langchain>=0.3.7",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 120
