[project]
name = "json-lawgic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "langchain-openai",
    "langchain",
    "python-dotenv>=1.0.1",
    "ruff",
    "langflow>=1.1.0",
    "ipykernel>=6.29.5",
    "cairosvg>=2.7.1",
    "langchain-anthropic>=0.3.0",
]

[tool.ruff]
line-length = 120
